# brick-breaker

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/config/: GlobalConfig.cmake
cmake/func/: AddTargetSource.cmake
ext/: CMakeLists.txt
include/breakout/: CMakeLists.txt  camera.hpp
include/breakout/app/: CMakeLists.txt  SDLWrapper.hpp  app.hpp  input.hpp
include/breakout/core/: CMakeLists.txt  event_system.hpp  logger.hpp
include/breakout/game/: CMakeLists.txt  app.hpp  game.hpp  player_controller.hpp  shader.hpp  texture_2d.hpp
include/breakout/gpu/: CMakeLists.txt  vk_types.hpp
include/breakout/stl/: CMakeLists.txt  concurrent_queue.hpp  fixed_string.hpp
src/: CMakeLists.txt  camera.cpp  main.cpp
src/app/: CMakeLists.txt  SDLWrapper.cpp  app.cpp
src/core/: CMakeLists.txt  logger.cpp
src/game/: CMakeLists.txt  app.cpp  game.cpp  resource_manager.cpp  shader.cpp  texture_2d.cpp
